# SDL-Net-MPGame

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: FindSDL2_net.cmake
src/: Client.cpp  Client.h  Program.cpp  Program.h  Server.cpp  Server.h  main.cpp
src/entity/: BaseEntity.cpp  BaseEntity.h  PlayerEntity.cpp  PlayerEntity.h  entityTypeEnum.h
src/math/: Vector2.cpp  Vector2.h  physics.h  random.h
src/misc/: log.h  types.h
src/network/: Client.h  NetworkClient.h  NetworkManager.cpp  NetworkManager.h  serialize.cpp  serialize.h
src/network/messages/: Base.h  EntityUpdate.h  messageTypeEnum.h
src/network/states/: EntityState.h  EventState.h  GameState.h
src/network/states/events/: BaseEvent.h  ControlEvent.h  HeartBeatEvent.h
src/visual/: Renderer.cpp  Renderer.h  TextureWrapper.cpp  TextureWrapper.h
